# EDLAO

./: .gitignore  README.md  eval.sh  get_eval_results.py  main_edlao.py  pyproject.toml  requirements-npu.txt  run_rl.sh  run_rl_e_l_c.sh  run_rl_ea_l.sh  run_rl_ea_l_c.sh  run_rl_ea_l_math.sh  run_rl_entropy_loss.sh  start_vllm_server.sh  test  train_deepmath_lora.sh  train_deepmath_lora_0915.sh  train_deepmath_lora_2.sh  visualization.py
actor/: edlao_dp_actor.py
config/: edlao_trainer.yaml
dataset/: dapo.py  deepmath.py
trainer/: edlao_trainer.py
utils/: deepmath_reward.py  utils.py
verl/trainer/: main_ppo.py
verl/trainer/config/: ppo_trainer.yaml
verl/trainer/config/actor/: actor.yaml
verl/trainer/ppo/: ray_trainer.py
verl/utils/reward_score/: gsm8k.py
verl/workers/actor/: dp_actor.py
workers/: edlao_fsdp_workers.py
workers/actor/: dp_actor.py
