[project]
name = "edlao-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "verl==0.5.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "dill>=0.3.8",
    "codetiming>=1.4.0",
    "hydra-core>=1.3.2",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pyarrow>=21.0.0",
    "pybind11>=3.0.1",
    "pylatexenc>=2.10",
    "ray[default]>=2.48.0",
    "tensordict>=0.9.1",
    "torchdata>=0.11.0",
    "transformers>=4.56.1",
    "wandb>=0.21.3",
    "vllm>=0.10.1.1",
    "liger-kernel>=0.6.2",
    "swanlab>=0.6.8",
    "transformer-engine>=2.6.0.post1",
    "megatron-core[dev]>=0.12.2",
    "setuptools>=79.0.1",
    "flash-attn>=2.8.3",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]


[tool.uv.sources]
torch = { index = "pytorch-cuda", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch-cuda", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cuda", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128/"
explicit = true
